overflow bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,4 +3,5 @@
 }
 body{
     background-color: #fffafa;
+    overflow-x: hidden;
 }
